# CI312-opengl

./: CMakeLists.txt
source/Main/: Controller.cpp  Controller.h  Main.cpp  Model.cpp  Model.h  SimpleFragmentShader.hlsl  SimpleVertexShader.hlsl  Viewer.cpp  Viewer.h
source/Shaders/: SimpleVertexShader.hlsl
source/Shapes/: Obj.cpp  Obj.h  Shape.cpp  Shape.h  Tetrahedron.cpp  Tetrahedron.h
